# VMEC2000

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  VMEC2000.dep  cmake_config_file.json  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  run_tests_mpi  search.html  searchindex.js  setup.py  vmec.html
.github/workflows/: ci.yml  ci_without_pip.yml  conda.yml  docs.yml  wheel.yml
Sources/: CMakeLists.txt
Sources/General/: CMakeLists.txt  bcovar.f  cleanup.f90  funct3d.f  reinit.f90  vmec_c_interface.f  vmec_ext_interface.f
Sources/Initialization_Cleanup/: CMakeLists.txt  allocate_ns.f  fixaray.f  free_mem_ns.f  guess_axis.f  initialize_radial.f  initialize_vmec_arrays.f
Sources/Input_Output/: eqfor.f  fileout.f  jxbforce.f  mercier.f  read_indata.f  readin.f  wrout.f
Sources/LIBSTELL_minimal/: CMakeLists.txt  date_and_computer.f  ezcdf_GenGet.f90  ezcdf_GenPut.f90  ezcdf_attrib.f90  ezcdf_inqvar.f90  ezcdf_opncls.f90  getcarg.f90  gmres.f  gmresr.f  handle_err.f90  mgrid_mod.f  mpi_inc.f  read_namelist.f  safe_open_mod.f90  v3_utilities.f  vmec_getenv.f  vmec_input.f
Sources/NESTOR_vacuum/: fouri.f  scalpot.f  vacuum.f
Sources/TimeStep/: CMakeLists.txt  eqsolve.f  evolve.f  parallel_vmec_module.f90  runvmec.f  vmec.f
_sources/: index.rst.txt  modules.rst.txt  vmec.rst.txt
ci/: Dockerfile.manylinux2014  wheel.yml
cmake/machines/: centos_gcc_mkl.json  centos_gcc_openmpi_openblas.json  cobra_intel.json  conda.json  cori.json  ginsburg_gcc.json  m100_gnu.json  mac_ci.json  mac_czhu_gfortran.json  mac_kaptanoglu_gfortran_fix.json  mac_landreman_conda.json  mac_manual_conda.json  nersc_cori_gnu.json  nersc_cori_intel.json  nersc_perlmutter_gnu.json  nersc_perlmutter_intel.json  pppl_gcc.json  pppl_intel.json  stellar_gcc.json
conda.recipe/: build.sh  conda_build_config.yaml  meta.yaml
docs/: index.md
docs/source/: conf.py  index.rst
python/: CMakeLists.txt  cmake_config_file.json  cori_intel.json  pppl_gcc.json  pyproject.toml  run_tests_mpi  setup.cfg  setup.py  ubuntu.json
python/fortran_src/: README.txt  cleanup.f90  reinit.f90
python/machines/: draco_intel.json  mac_ci.json  mac_gcc.json
python/src/vmec/: __init__.py  core.py
python/tests/: test_regression.py  test_simple.py  test_vmec.py  test_vmec_f90wrap.py  threed1.li383_low_res  wout_LandremanSenguptaPlunk_section5p3_low_res_reference.nc  wout_circular_tokamak_reference.nc  wout_li383_low_res_reference.nc
tests/: input.LandremanSenguptaPlunk_section5p3_low_res  input.circular_tokamak  input.li383_low_res  input.up_down_asymmetric_tokamak  test_regression.py  test_rerun.py  test_simple.py  test_vmec.py  wout_LandremanSenguptaPlunk_section5p3_low_res_reference.nc  wout_up_down_asymmetric_tokamak_reference.nc
