[metadata]
name = vmec
version = 0.0.1
description = Python package for VMEC, a MHD equilibrium solver code
license = MIT
platform = any
classifiers = 
    Development Status :: 1 - Alpha
    Intended Audience :: Nuclear Fusion Community
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: MHD Equilibrium Solver

[options]
packages = find:
package_dir = 
    =src
install_requires = 
    f90wrap==v0.2.3

[options.packages.find]
where = src
